# keygenerator_tiktok

./: .gitignore  README.md  electron-builder.config.cjs  electron-builder.config.json  package.json
.github/workflows/: build.yml
scripts/: build.ts  discover.ts
src/: constants.ts  index.ts  napi.ts  preload.js
src-tauri/: Cargo.toml  tauri.conf.json  tiktok_auth_data.json
src-tauri/src/: api.rs  auth.rs  config.rs  cookie_interceptor.rs  credentials.rs  data_capture.rs  integration_tests.rs  login_window.rs  main.rs  pkce.rs  stream.rs  test_utils.rs  url_utils.rs
src/api/: StreamAPI.ts
src/auth/: AuthManager.ts  electron-login.ts
src/cli/: index.ts
src/config/: ConfigManager.ts
src/preload/: context.js
src/ui/: index.html  preload.js  renderer.js  style.css
src/utils/: apiClient.ts  context.ts  fileUtils.ts  ipc-handler.ts  ipc-types.ts  ipcHandler.ts  json.ts  windowManager.ts
tests/: api.test.ts  auth.test.ts
