[package]
name = "keygenerator"
version = "0.1.0"
description = "TikTok Stream Key Generator - Full Tauri 2 implementation"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Web browser opening
webbrowser = "0.8"

# URL encoding
percent-encoding = "2"

# Hex encoding
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4"] }

# Mutex with Send guard
parking_lot = "0.12"

# Tauri 2.x dependencies
[dependencies.tauri]
version = "2"
features = []

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[patch.crates-io]
