[package]
name = "keygenerator"
version = "0.1.0"
description = "TikTok Stream Key Generator"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
webbrowser = "0.8"
percent-encoding = "2"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
url = "2.5"

# Tauri 2.x dependencies
[dependencies.tauri]
version = "2"
features = []

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
